# cmd/handlers/cart.handler.go
@@ -16,6 +16,17 @@ type cartHandler struct {
 	cartSrv service.CartService
 }
 
+// Get Cart godoc
+// @Summary	Get cart route
+// @Description	Get a user's cart details
+// @Tags	Cart
+// @Produce	json
+// @Success	200  {object}	response.SuccessMessage{data=models.Cart}
+// @Failure	400  {object}  response.ErrorMessage
+// @Failure	404  {object}  response.ErrorMessage
+// @Failure	500  {object}  response.ErrorMessage
+// @Router	/carts/ [get]
+// @Security ApiKeyAuth
 func (ch *cartHandler) Get(c *gin.Context) {
 	userId := c.GetString("userId")
 
@@ -28,6 +39,17 @@ func (ch *cartHandler) Get(c *gin.Context) {
 	response.Success(c, "Cart gotten successfully", carts)
 }
 
+// Clear Cart godoc
+// @Summary	Clear cart route
+// @Description	Clear a user's cart i.e delete all items in the cart
+// @Tags	Cart
+// @Produce	json
+// @Success	200  {object}	response.SuccessMessage
+// @Failure	400  {object}  response.ErrorMessage
+// @Failure	404  {object}  response.ErrorMessage
+// @Failure	500  {object}  response.ErrorMessage
+// @Router	/carts/ [delete]
+// @Security ApiKeyAuth
 func (ch *cartHandler) Clear(c *gin.Context) {
 	userId := c.GetString("userId")
 
