# cmd/routes/cart_item.route.go
@@ -11,12 +11,12 @@ import (
 func CartItemRoute(router *gin.RouterGroup, cartItemSrv service.CartItemService, authSrv service.AuthService) {
 	handler := handler.NewCartItemHandler(cartItemSrv)
 	auth := middleware.Authentication(authSrv)
-	item := router.Group("/items")
 
+	item := router.Group("/items")
 	item.Use(auth.CheckJWT())
 	{
-		item.POST("/", handler.Add)
-		item.GET("/", handler.GetItems)
+		item.POST("", handler.Add)
+		item.GET("", handler.GetItems)
 		item.GET("/:productId", handler.Get)
 		item.DELETE("/:productId", handler.Delete)
 	}
