# cmd/routes/user.route.go
@@ -2,6 +2,7 @@ package route
 
 import (
 	handler "e-commerce/cmd/handlers"
+	"e-commerce/cmd/middleware"
 	"e-commerce/internal/service"
 
 	"github.com/gin-gonic/gin"
@@ -14,8 +15,12 @@ func UserRoute(router *gin.RouterGroup, userSrv service.UserService, authSrv ser
 		user.POST("/signup", handler.Create)
 		user.POST("/login", handler.Login)
 		user.GET("/:userId", handler.GetById)
-		// user.POST("/reset-password", handler.ResetPassword)
-		// user.POST("/reset-password/validate-token", handler.ValidateToken)
-		// user.PATCH("/reset-password/change-password", handler.ChangePassword)
+	}
+
+	user1 := router.Group("/users")
+	jwt := middleware.Authentication(authSrv)
+	user1.Use(jwt.CheckJWT())
+	{
+		user1.POST("/logout", handler.Logout)
 	}
 }
