# internal/response/response.go
@@ -10,11 +10,24 @@ import (
 type Message struct {
 	Status       string `json:"status,omitempty"`
 	ResponseCode int    `json:"code,omitempty"`
-	Name         string `json:"name,omitempty"` //name of the error
 	Message      string `json:"message,omitempty"`
 	Error        any    `json:"error,omitempty"` //for errors that occur even if request is successful
 	Data         any    `json:"data,omitempty"`
 	Extra        any    `json:"extra,omitempty"`
+}
+
+type SuccessMessage struct {
+	Status       string `json:"status,omitempty" swaggertype:"string" example:"success"`
+	ResponseCode int    `json:"code,omitempty" swaggertype:"integer" example:"200"`
+	Message      string `json:"message,omitempty" swaggertype:"string" example:"fetched successfully"`
+	Data         any    `json:"data,omitempty"`
+}
+
+type ErrorMessage struct {
+	Status       string `json:"status,omitempty" swaggertype:"string" example:"failure"`
+	ResponseCode int    `json:"code,omitempty" swaggertype:"integer" example:"400"`
+	Message      string `json:"message,omitempty" swaggertype:"string" example:"error when fetching"`
+	Error        any    `json:"error,omitempty"`
 }
 
 func NewDecodingError(err error) *Message {
@@ -69,10 +82,6 @@ func Error(c *gin.Context, sErr se.ServiceError) {
 
 	c.AbortWithStatusJSON(code, msg)
 }
-
-// func NewCustomError(code int, message string) *ResponseMessage {
-// 	return &ResponseMessage{ResponseCode: code, Message: message}
-// }
 
 func getStatusCodeFromSE(errorType se.Type) int {
 	switch errorType {
